[package]
name = "stopping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = "0.13.0"
aws-sdk-ec2 = "0.13.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2.5", features = ["derive"] }
